# moyurobot

./: README.md  pyproject.toml  requirements.txt  setup.py
config/: mcp_config.json
pi_client/: requirements.txt
pi_client/config/: default.json
pi_client/moyurobot/core/: config.py  robot_service.py
pi_client/moyurobot/mcp/: server.py
pi_client/scripts/: start_all.sh  start_lekiwi.sh  start_xlerobot.sh
scripts/: start_all.sh  start_mcp.sh  start_pipe.sh  start_web.sh
src/moyurobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/moyurobot/core/: config.py  robot_service.py
src/moyurobot/mcp/: server.py
src/moyurobot/web/: __init__.py  controller.py
src/moyurobot/web/static/: script.js  style.css
src/moyurobot/web/templates/: index.html  login.html  waiting.html
